changes for final source release 1.2 packaging script CMake bug workaround for boost threads linking

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -7,6 +7,7 @@ v. 1.2 taxator-tk (=SVN r61)
 * better approximation of identity scores + support values in binner
 * optimizations in RPA procedure
 * heuristic to avoid excessive run-time with bad alignments
+* workaround for CMake bug with boost threads linking
 
 v. 1.1 taxator-tk (=SVN r51)
 ============================
