--- a/README.mkd
+++ b/README.mkd
@@ -40,12 +40,11 @@ A binning process can be implemented as follows:
 
 **(1) ALIGN [=> (2) CONVERT] [=> (3) FILTER] => (4) PREDICT SEGMENTS => (5) BINNING**
 
-Here is a description of the individual steps:
-
-## 1. **ALIGN**: Align sample sequences against database
-The aligner can be replaced as long a conversion tool is provided
-that will convert the aligners output into the intermediate alignment
-format used in the pipeline. Aligners supported out-of-the-box are
+## 1. **ALIGN**
+Align sample sequences against a database. The aligner can be replaced
+as long a conversion tool is provided that will convert the aligners
+output into the intermediate alignment format used in the pipeline.
+Aligners supported out-of-the-box are
 - NCBI blastn (ftp://ftp.ncbi.nih.gov/blast/executables/blast+/)
 - NCBI blastx (ftp://ftp.ncbi.nih.gov/blast/executables/blast+/)
 - LAST lastal (http://last.cbrc.jp)
@@ -54,16 +53,17 @@ format used in the pipeline. Aligners supported out-of-the-box are
 We used LAST for aligning nucleotide reads and contigs. The aligner is extremely
 fast but requires a large amount of main memory for running. You can align a
 real-sized sample within hours against all of microbial RefSeq. The current NCBI
-BLAST+ suite also works weel and seems run equally fast now without the
-mentioned memory requirements. The BLAST index files should not be stored on
-slow disk storage such as an NFS drive with high latency. The new BLAST has the
-advantage that it can directly generate the alignments in the required format
-and order, making any conversion or sorting steps superfluous (see next section).
+BLAST+ suite also works well but not as fast without the mentioned memory
+requirements. The BLAST index files should not be stored on slow disk storage such
+as an NFS drive with high latency. The new BLAST has the advantage that it can
+directly generate the alignments in the required format and order, making any
+conversion or sorting steps superfluous (see next section).
 
 For database construction with LAST, use only the accession to index the
-sequences. LAST README shows how to transform your FASTA identifiers.
+sequences. The LAST README shows how to transform your FASTA identifiers.
 
-## 2. **CONVERT**: Transform alignment into universal TAB-separated format
+## 2. **CONVERT**
+Transform alignment into universal TAB-separated format.
 The intermediate format is quite simple: a tab-separated text file.
 We provide scripts for use with "NCBI BLAST" (blastn or blastx
 using XML output) and "LAST" (using maf output) in the alignment
@@ -100,9 +100,10 @@ correct sequence names for your alignments (the same as in your mappings file),
 reformat your DB with the correct options, or in case of XML output, try the
 command line options of the conversion script blastxml2alignments.
 
-## 3. **FILTER**: Apply restriction filters
-E.g. exclude bad alignments. This step is optional and ususally not needed but
-can help you to implement your quality policies or reduce the run time.
+## 3. **FILTER**
+Apply restriction filters, e.g. to exclude bad alignments. This step is optional
+and ususally not needed but can help you to implement your quality policies or
+to reduce the run-time.
 
 - **alignments-filter**:
 Support some filtering schemes based on absolute and relative score values or
@@ -112,14 +113,14 @@ e-values. Check out the options.
 alignments-filter at the moment is a simple way to limit the run time of
 segment prediction by fixing the number of alignments given to it. This is
 because the run time of taxator with the RPA algorithm is in O(n) and n is the
-number of alignments for each reference segment. Eventually, there will be a
-flexible filter integrated into taxator to exclude alignments not relevant for
-taxonomic assignment. Until then, it is convenient to limit the number of
-alignments given to taxator to a number between 20 and 50.
+number of alignments for each reference segment. Starting with version 1.3, there
+is a flexible filter integrated into taxator to exclude alignments not relevant
+for taxonomic assignment.
 
 
-## 4. **PREDICT SEGMENTS**: Make a taxonomic classification for regions of homology
-There can be multiple such regions on a contiguous stretch of a query sequence.
+## 4. **PREDICT SEGMENTS**
+Make a taxonomic classification for regions of homology. There can be multiple
+such regions on a contiguous stretch of a query sequence.
 
 - **taxator**:
 Does the actual taxonomic prediction by mapping the alignment reference
@@ -139,10 +140,11 @@ this file doesn't exist, it will be generated automatically. For this feature to
 work nicely, make sure that your disk storage is fast and has low enough latency
 (e.g. generally avoid network storage).
 If you want to look into taxator's log file, be warned that these are quite
-large and can grow to several GBs of size.
+large and can grow to several GiBs of size.
 
-## 5. **BINNING**: Use a strategy to combine one or more segment predictions
-Assign the whole sequence. Binning represents a common means to use the segment
+## 5. **BINNING**
+Use a strategy to combine one or more segment predictions and to assign entire
+query sequences. Binning represents a common means to use the segment
 assignments. Others could be the detection of assembly errors or to look for
 unknown horizontal gene transfers.
 
@@ -178,9 +180,9 @@ TAXATORTK_TAXONOMY_NCBI. You can use the provided script
 "download-ncbi-taxonomy-gimapping.sh" to download the taxonomy files from the
 official NCBI FTP server. Example:
 
-mkdir ncbi-taxonomy && cd ncbi-taxonomy
-path_unpacked_taxator-tk/tools/download-ncbi-taxonomy-gimapping.sh
-export TAXATORTK_TAXONOMY_NCBI=$PWD
+    mkdir ncbi-taxonomy && cd ncbi-taxonomy
+    path_unpacked_taxator-tk/tools/download-ncbi-taxonomy-gimapping.sh
+    export TAXATORTK_TAXONOMY_NCBI=$PWD
 
 An environment variable is only persistent for the current session. It must be
 reset every time you are opening a new shell or command line terminal.
@@ -194,10 +196,13 @@ the mapping exactly! maps the reference sequences names, as reported by the
 aligner, to taxonomic IDs, as specified in the taxonomy. It is easy to check
 for unmappable reference taxonomic IDs by running the program taxknife in
 "annotation" mode with a list of IDs and looking for the reported errors:
-  taxknife -f 2 annotation < mapping.tax >/dev/null
+
+    taxknife -f 2 annotation < mapping.tax >/dev/null
+
 Normal operation in taxator is on a pruned taxonomy with major ranks, so
 transform the mapping by running:
-  taxknife -f 2 traversal -r species genus family order class phylum superkingdom < mapping.tax > newmapping.tax
+
+    taxknife -f 2 traversal -r species genus family order class phylum superkingdom < mapping.tax > newmapping.tax
 
 --------------------------------------------------------------------------------
 
